src/main/java/antlr/generatedClasses/GrammaireParser.java
package antlr.generatedClasses;
// $ANTLR 3.5.2 Grammaire.g 2021-02-15 13:18:20

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class GrammaireParser extends Parser {
	public static final String[] tokenNames = new String[] {
			"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AFFECTATION", "APPEL_FONCTION",
			"ATTRIBUT", "BLOCK", "CAST", "CLASSE", "CLASSID", "COMMENT", "CONDITION",
			"DO", "ELSE", "EXTENDS", "FONCTION", "GROUP", "HERITED", "ID", "IDENTIFICATEUR",
			"IF", "INT", "LIST_PARAM", "MESSAGE", "METHOD", "MOINS_UNAIRE", "NEW",
			"PARAM", "PLUS_UNAIRE", "RESULT", "ROOT", "SELECT", "STR", "STRING", "THEN",
			"VALUE", "VARIABLE", "VARIABLE_LOCALE", "WHILE", "WHITESPACE", "'&&'",
			"'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "':'",
			"':='", "';'", "'<'", "'<>'", "'='", "'>'", "'as'", "'class'", "'def'",
			"'do'", "'else'", "'extends'", "'if'", "'is'", "'new'", "'override'",
			"'result'", "'return'", "'static'", "'super'", "'then'", "'this'", "'var'",
			"'while'", "'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int AFFECTATION=4;
	public static final int APPEL_FONCTION=5;
	public static final int ATTRIBUT=6;
	public static final int BLOCK=7;
	public static final int CAST=8;
	public static final int CLASSE=9;
	public static final int CLASSID=10;
	public static final int COMMENT=11;
	public static final int CONDITION=12;
	public static final int DO=13;
	public static final int ELSE=14;
	public static final int EXTENDS=15;
	public static final int FONCTION=16;
	public static final int GROUP=17;
	public static final int HERITED=18;
	public static final int ID=19;
	public static final int IDENTIFICATEUR=20;
	public static final int IF=21;
	public static final int INT=22;
	public static final int LIST_PARAM=23;
	public static final int MESSAGE=24;
	public static final int METHOD=25;
	public static final int MOINS_UNAIRE=26;
	public static final int NEW=27;
	public static final int PARAM=28;
	public static final int PLUS_UNAIRE=29;
	public static final int RESULT=30;
	public static final int ROOT=31;
	public static final int SELECT=32;
	public static final int STR=33;
	public static final int STRING=34;
	public static final int THEN=35;
	public static final int VALUE=36;
	public static final int VARIABLE=37;
	public static final int VARIABLE_LOCALE=38;
	public static final int WHILE=39;
	public static final int WHITESPACE=40;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public GrammaireParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GrammaireParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return GrammaireParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Grammaire.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// Grammaire.g:43:1: prog : declaration -> ^( ROOT declaration ) ;
	public final GrammaireParser.prog_return prog() throws RecognitionException {
		GrammaireParser.prog_return retval = new GrammaireParser.prog_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope declaration1 =null;

		RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");

		try {
			// Grammaire.g:44:2: ( declaration -> ^( ROOT declaration ) )
			// Grammaire.g:44:4: declaration
			{
				pushFollow(FOLLOW_declaration_in_prog170);
				declaration1=declaration();
				state._fsp--;

				stream_declaration.add(declaration1.getTree());
				// AST REWRITE
				// elements: declaration
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

				root_0 = (Object)adaptor.nil();
				// 44:16: -> ^( ROOT declaration )
				{
					// Grammaire.g:44:19: ^( ROOT declaration )
					{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);
						adaptor.addChild(root_1, stream_declaration.nextTree());
						adaptor.addChild(root_0, root_1);
					}

				}


				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// Grammaire.g:47:1: declaration : ( cls )* bloc ;
	public final GrammaireParser.declaration_return declaration() throws RecognitionException {
		GrammaireParser.declaration_return retval = new GrammaireParser.declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope cls2 =null;
		ParserRuleReturnScope bloc3 =null;


		try {
			// Grammaire.g:48:2: ( ( cls )* bloc )
			// Grammaire.g:48:4: ( cls )* bloc
			{
				root_0 = (Object)adaptor.nil();


				// Grammaire.g:48:4: ( cls )*
				loop1:
				while (true) {
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==59) ) {
						alt1=1;
					}

					switch (alt1) {
						case 1 :
							// Grammaire.g:48:5: cls
						{
							pushFollow(FOLLOW_cls_in_declaration190);
							cls2=cls();
							state._fsp--;

							adaptor.addChild(root_0, cls2.getTree());

						}
						break;

						default :
							break loop1;
					}
				}

				pushFollow(FOLLOW_bloc_in_declaration194);
				bloc3=bloc();
				state._fsp--;

				adaptor.addChild(root_0, bloc3.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class cls_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "cls"
	// Grammaire.g:51:1: cls : 'class' CLASSID '(' ( formalParam ( ',' formalParam )* )? ')' ( 'extends' CLASSID )? 'is' blocClass -> ^( CLASSE CLASSID ( ^( LIST_PARAM ( formalParam )* ) )? ( ^( EXTENDS CLASSID ) )? blocClass ) ;
	public final GrammaireParser.cls_return cls() throws RecognitionException {
		GrammaireParser.cls_return retval = new GrammaireParser.cls_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal4=null;
		Token CLASSID5=null;
		Token char_literal6=null;
		Token char_literal8=null;
		Token char_literal10=null;
		Token string_literal11=null;
		Token CLASSID12=null;
		Token string_literal13=null;
		ParserRuleReturnScope formalParam7 =null;
		ParserRuleReturnScope formalParam9 =null;
		ParserRuleReturnScope blocClass14 =null;

		Object string_literal4_tree=null;
		Object CLASSID5_tree=null;
		Object char_literal6_tree=null;
		Object char_literal8_tree=null;
		Object char_literal10_tree=null;
		Object string_literal11_tree=null;
		Object CLASSID12_tree=null;
		Object string_literal13_tree=null;
		RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
		RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
		RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
		RewriteRuleTokenStream stream_63=new RewriteRuleTokenStream(adaptor,"token 63");
		RewriteRuleTokenStream stream_65=new RewriteRuleTokenStream(adaptor,"token 65");
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
		RewriteRuleTokenStream stream_CLASSID=new RewriteRuleTokenStream(adaptor,"token CLASSID");
		RewriteRuleSubtreeStream stream_formalParam=new RewriteRuleSubtreeStream(adaptor,"rule formalParam");
		RewriteRuleSubtreeStream stream_blocClass=new RewriteRuleSubtreeStream(adaptor,"rule blocClass");

		try {
			// Grammaire.g:52:2: ( 'class' CLASSID '(' ( formalParam ( ',' formalParam )* )? ')' ( 'extends' CLASSID )? 'is' blocClass -> ^( CLASSE CLASSID ( ^( LIST_PARAM ( formalParam )* ) )? ( ^( EXTENDS CLASSID ) )? blocClass ) )
			// Grammaire.g:52:4: 'class' CLASSID '(' ( formalParam ( ',' formalParam )* )? ')' ( 'extends' CLASSID )? 'is' blocClass
			{
				string_literal4=(Token)match(input,59,FOLLOW_59_in_cls205);
				stream_59.add(string_literal4);

				CLASSID5=(Token)match(input,CLASSID,FOLLOW_CLASSID_in_cls207);
				stream_CLASSID.add(CLASSID5);

				char_literal6=(Token)match(input,43,FOLLOW_43_in_cls209);
				stream_43.add(char_literal6);

				// Grammaire.g:52:24: ( formalParam ( ',' formalParam )* )?
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==ID||LA3_0==74) ) {
					alt3=1;
				}
				switch (alt3) {
					case 1 :
						// Grammaire.g:52:25: formalParam ( ',' formalParam )*
					{
						pushFollow(FOLLOW_formalParam_in_cls212);
						formalParam7=formalParam();
						state._fsp--;

						stream_formalParam.add(formalParam7.getTree());
						// Grammaire.g:52:37: ( ',' formalParam )*
						loop2:
						while (true) {
							int alt2=2;
							int LA2_0 = input.LA(1);
							if ( (LA2_0==47) ) {
								alt2=1;
							}

							switch (alt2) {
								case 1 :
									// Grammaire.g:52:38: ',' formalParam
								{
									char_literal8=(Token)match(input,47,FOLLOW_47_in_cls215);
									stream_47.add(char_literal8);

									pushFollow(FOLLOW_formalParam_in_cls217);
									formalParam9=formalParam();
									state._fsp--;

									stream_formalParam.add(formalParam9.getTree());
								}
								break;

								default :
									break loop2;
							}
						}

					}
					break;

				}

				char_literal10=(Token)match(input,44,FOLLOW_44_in_cls225);
				stream_44.add(char_literal10);

				// Grammaire.g:52:64: ( 'extends' CLASSID )?
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==63) ) {
					alt4=1;
				}
				switch (alt4) {
					case 1 :
						// Grammaire.g:52:65: 'extends' CLASSID
					{
						string_literal11=(Token)match(input,63,FOLLOW_63_in_cls228);
						stream_63.add(string_literal11);

						CLASSID12=(Token)match(input,CLASSID,FOLLOW_CLASSID_in_cls230);
						stream_CLASSID.add(CLASSID12);

					}
					break;

				}

				string_literal13=(Token)match(input,65,FOLLOW_65_in_cls234);
				stream_65.add(string_literal13);

				pushFollow(FOLLOW_blocClass_in_cls236);
				blocClass14=blocClass();
				state._fsp--;

				stream_blocClass.add(blocClass14.getTree());
				// AST REWRITE
				// elements: blocClass, CLASSID, formalParam, CLASSID
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

				root_0 = (Object)adaptor.nil();
				// 52:100: -> ^( CLASSE CLASSID ( ^( LIST_PARAM ( formalParam )* ) )? ( ^( EXTENDS CLASSID ) )? blocClass )
				{
					// Grammaire.g:52:103: ^( CLASSE CLASSID ( ^( LIST_PARAM ( formalParam )* ) )? ( ^( EXTENDS CLASSID ) )? blocClass )
					{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASSE, "CLASSE"), root_1);
						adaptor.addChild(root_1, stream_CLASSID.nextNode());
						// Grammaire.g:52:120: ( ^( LIST_PARAM ( formalParam )* ) )?
						if ( stream_formalParam.hasNext() ) {
							// Grammaire.g:52:120: ^( LIST_PARAM ( formalParam )* )
							{
								Object root_2 = (Object)adaptor.nil();
								root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(LIST_PARAM, "LIST_PARAM"), root_2);
								// Grammaire.g:52:133: ( formalParam )*
								while ( stream_formalParam.hasNext() ) {
									adaptor.addChild(root_2, stream_formalParam.nextTree());
								}
								stream_formalParam.reset();

								adaptor.addChild(root_1, root_2);
							}

						}
						stream_formalParam.reset();

						// Grammaire.g:52:148: ( ^( EXTENDS CLASSID ) )?
						if ( stream_CLASSID.hasNext() ) {
							// Grammaire.g:52:148: ^( EXTENDS CLASSID )
							{
								Object root_2 = (Object)adaptor.nil();
								root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(EXTENDS, "EXTENDS"), root_2);
								adaptor.addChild(root_2, stream_CLASSID.nextNode());
								adaptor.addChild(root_1, root_2);
							}

						}
						stream_CLASSID.reset();

						adaptor.addChild(root_1, stream_blocClass.nextTree());
						adaptor.addChild(root_0, root_1);
					}

				}


				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "cls"


	public static class blocClass_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "blocClass"
	// Grammaire.g:54:1: blocClass : '{' ! ( variable | methoddef )* '}' !;
	public final GrammaireParser.blocClass_return blocClass() throws RecognitionException {
		GrammaireParser.blocClass_return retval = new GrammaireParser.blocClass_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal15=null;
		Token char_literal18=null;
		ParserRuleReturnScope variable16 =null;
		ParserRuleReturnScope methoddef17 =null;

		Object char_literal15_tree=null;
		Object char_literal18_tree=null;

		try {
			// Grammaire.g:55:2: ( '{' ! ( variable | methoddef )* '}' !)
			// Grammaire.g:55:4: '{' ! ( variable | methoddef )* '}' !
			{
				root_0 = (Object)adaptor.nil();


				char_literal15=(Token)match(input,76,FOLLOW_76_in_blocClass271);
				// Grammaire.g:55:9: ( variable | methoddef )*
				loop5:
				while (true) {
					int alt5=3;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==74) ) {
						alt5=1;
					}
					else if ( (LA5_0==60) ) {
						alt5=2;
					}

					switch (alt5) {
						case 1 :
							// Grammaire.g:55:10: variable
						{
							pushFollow(FOLLOW_variable_in_blocClass275);
							variable16=variable();
							state._fsp--;

							adaptor.addChild(root_0, variable16.getTree());

						}
						break;
						case 2 :
							// Grammaire.g:55:20: methoddef
						{
							pushFollow(FOLLOW_methoddef_in_blocClass278);
							methoddef17=methoddef();
							state._fsp--;

							adaptor.addChild(root_0, methoddef17.getTree());

						}
						break;

						default :
							break loop5;
					}
				}

				char_literal18=(Token)match(input,78,FOLLOW_78_in_blocClass282);
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "blocClass"


	public static class bloc_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "bloc"
	// Grammaire.g:58:1: bloc : '{' ( bloc2 )? '}' -> ^( BLOCK ( bloc2 )? ) ;
	public final GrammaireParser.bloc_return bloc() throws RecognitionException {
		GrammaireParser.bloc_return retval = new GrammaireParser.bloc_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal19=null;
		Token char_literal21=null;
		ParserRuleReturnScope bloc220 =null;

		Object char_literal19_tree=null;
		Object char_literal21_tree=null;
		RewriteRuleTokenStream stream_78=new RewriteRuleTokenStream(adaptor,"token 78");
		RewriteRuleTokenStream stream_76=new RewriteRuleTokenStream(adaptor,"token 76");
		RewriteRuleSubtreeStream stream_bloc2=new RewriteRuleSubtreeStream(adaptor,"rule bloc2");

		try {
			// Grammaire.g:59:2: ( '{' ( bloc2 )? '}' -> ^( BLOCK ( bloc2 )? ) )
			// Grammaire.g:59:4: '{' ( bloc2 )? '}'
			{
				char_literal19=(Token)match(input,76,FOLLOW_76_in_bloc294);
				stream_76.add(char_literal19);

				// Grammaire.g:59:8: ( bloc2 )?
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==CLASSID||LA6_0==ID||LA6_0==STR||LA6_0==64||(LA6_0 >= 68 && LA6_0 <= 69)||LA6_0==71||LA6_0==73||(LA6_0 >= 75 && LA6_0 <= 76)) ) {
					alt6=1;
				}
				switch (alt6) {
					case 1 :
						// Grammaire.g:59:8: bloc2
					{
						pushFollow(FOLLOW_bloc2_in_bloc296);
						bloc220=bloc2();
						state._fsp--;

						stream_bloc2.add(bloc220.getTree());
					}
					break;

				}

				char_literal21=(Token)match(input,78,FOLLOW_78_in_bloc299);
				stream_78.add(char_literal21);

				// AST REWRITE
				// elements: bloc2
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

				root_0 = (Object)adaptor.nil();
				// 59:62: -> ^( BLOCK ( bloc2 )? )
				{
					// Grammaire.g:59:65: ^( BLOCK ( bloc2 )? )
					{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_1);
						// Grammaire.g:59:73: ( bloc2 )?
						if ( stream_bloc2.hasNext() ) {
							adaptor.addChild(root_1, stream_bloc2.nextTree());
						}
						stream_bloc2.reset();

						adaptor.addChild(root_0, root_1);
					}

				}


				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "bloc"


	public static class variable_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "variable"
	// Grammaire.g:62:1: variable : 'var' (stat= 'static' )? ID ':' CLASSID ( ':=' expr )? ';' -> ^( ATTRIBUT ID CLASSID ( ^( VALUE expr ) )? ( $stat)? ) ;
	public final GrammaireParser.variable_return variable() throws RecognitionException {
		GrammaireParser.variable_return retval = new GrammaireParser.variable_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token stat=null;
		Token string_literal22=null;
		Token ID23=null;
		Token char_literal24=null;
		Token CLASSID25=null;
		Token string_literal26=null;
		Token char_literal28=null;
		ParserRuleReturnScope expr27 =null;

		Object stat_tree=null;
		Object string_literal22_tree=null;
		Object ID23_tree=null;
		Object char_literal24_tree=null;
		Object CLASSID25_tree=null;
		Object string_literal26_tree=null;
		Object char_literal28_tree=null;
		RewriteRuleTokenStream stream_70=new RewriteRuleTokenStream(adaptor,"token 70");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_51=new RewriteRuleTokenStream(adaptor,"token 51");
		RewriteRuleTokenStream stream_74=new RewriteRuleTokenStream(adaptor,"token 74");
		RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
		RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
		RewriteRuleTokenStream stream_CLASSID=new RewriteRuleTokenStream(adaptor,"token CLASSID");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");

		try {
			// Grammaire.g:63:2: ( 'var' (stat= 'static' )? ID ':' CLASSID ( ':=' expr )? ';' -> ^( ATTRIBUT ID CLASSID ( ^( VALUE expr ) )? ( $stat)? ) )
			// Grammaire.g:63:4: 'var' (stat= 'static' )? ID ':' CLASSID ( ':=' expr )? ';'
			{
				string_literal22=(Token)match(input,74,FOLLOW_74_in_variable321);
				stream_74.add(string_literal22);

				// Grammaire.g:63:10: (stat= 'static' )?
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==70) ) {
					alt7=1;
				}
				switch (alt7) {
					case 1 :
						// Grammaire.g:63:11: stat= 'static'
					{
						stat=(Token)match(input,70,FOLLOW_70_in_variable326);
						stream_70.add(stat);

					}
					break;

				}

				ID23=(Token)match(input,ID,FOLLOW_ID_in_variable330);
				stream_ID.add(ID23);

				char_literal24=(Token)match(input,51,FOLLOW_51_in_variable332);
				stream_51.add(char_literal24);

				CLASSID25=(Token)match(input,CLASSID,FOLLOW_CLASSID_in_variable334);
				stream_CLASSID.add(CLASSID25);
